# HSE-Financial-App

./: CMakeLists.txt
docs/: README.md
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt
src/application/commands/: commands.h
src/application/decorators/: command_decorators.h
src/application/facades/: account_facade.h  analytics_facade.h  operation_facade.h
src/common/: CMakeLists.txt  exceptions.h  types.h  utils.h  validation.h
src/domain/: CMakeLists.txt
src/domain/entities/: bank_account.h  category.h  operation.h
src/domain/factories/: entity_factory.h
src/domain/repositories/: repository_interfaces.h
src/domain/services/: domain_services.h
src/domain/value_objects/: date_range.h  money.h  types.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/di/: di_container.h
src/infrastructure/persistence/: in_memory_repository.h
src/infrastructure/proxy/: caching_proxy.h
src/infrastructure/serialization/: data_exporter.h  data_importer.h
src/presentation/: CMakeLists.txt
src/presentation/console/: console_ui.h
tests/: CMakeLists.txt
